--- a/halaman2.html
+++ b/halaman2.html
@@ -99,6 +99,7 @@
 <header>
     <h1>Selamat Datang di UmaValencia Preset</h1>
     <p>Koleksi Preset Alight Motion Terbaik untuk Editing Video Anda!</p>
+    <p>Web Ini Masih Tahap Perkembangan Atau Masih Uji Coba</p>
 </header>
 
 <nav>
