--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <form action="halaman2.html" method="get">
 
-    <title>Login Keren</title>
+    <title>UmaValencia</title>
     <style>
         * {
             margin: 0;
@@ -15,7 +15,7 @@
         }
 
         body {
-            background-image: url('https://source.unsplash.com/1600x900/?nature,water'); /* Ganti dengan link gambar yang kamu suka */
+            background-image: url('background.png'); /* Ganti dengan link gambar yang kamu suka */
             background-size: cover;
             background-position: center;
             height: 100vh;
