--- a/index.html
+++ b/index.html
@@ -82,11 +82,8 @@
     <h2>Login</h2>
     <form action="#">
         <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
+        <input type="text" placeholder="Bebas Isi" required>
         <input type="submit" value="Login">
     </form>
     <a href="#">Lupa Password?</a>
-</div>
-
-</body>
-</html>
+    <a href="akunbaru.html">Buat Akun</a
